# dailytasks

./: .env.example  .gitignore  README.md  TEST_CHECKLIST.md  config.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
prompts/: nudges.toml  star_eval.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs
src-tauri/src/ai/: deepseek.rs  local_rules.rs  mod.rs  prompt.rs  provider.rs  queue.rs
src-tauri/src/commands/: ai.rs  chat.rs  mod.rs  settings.rs  tasks.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/nudge/: engine.rs  scheduler.rs
src/components/: AppErrorBoundary.tsx  BottomNav.tsx  ChatView.tsx  Clock.tsx  CompletionDialog.tsx  HistoryView.tsx  NudgeBanner.tsx  OnboardingView.tsx  PomodoroTimer.tsx  PomodoroView.tsx  ProgressPanel.tsx  SettingsDialog.tsx  StarBadge.tsx  TaskCard.tsx  TaskInput.tsx  TaskList.tsx  TaskView.tsx  Toast.tsx
src/hooks/: useTasks.ts  useTauriEvent.ts
src/lib/: ipc.ts
src/stores/: uiStore.ts
